--- a/site.css
+++ b/site.css
@@ -11,13 +11,12 @@ header h1 {
     margin: 0;
 }
 #menu-nav {
-    background-color: azure;  
+    background-color: honeydew;  
     padding: 1vh;
 }
 #menu-nav ul {
     display: flex;
     list-style: none;
-    
     justify-content: center;
     margin: 0;
     padding: 0;
