--- a/site.css
+++ b/site.css
@@ -3,6 +3,7 @@ body {
 }
 main {
     margin: 15px;
+    flex: 8;
 }
 header {
     background-color: #50eb3c;
@@ -36,17 +37,17 @@ header h1 {
     display: flex;
     flex: 10;
 }
-main {
-    flex: 8;
-}
 #menu-aside {
     flex: 2;
     font-size: 15px;
+    background-color: #50eb3c;
+    height: 100%;
+    color: honeydew;
+    max-width: 220px;
 }
 #menu-aside ul {
     font-size: 1em;
     list-style: none;
-    padding-inline-start: 15px;
 }
 #section-em-alta {
     text-align: center;
@@ -57,8 +58,16 @@ main {
     justify-content: center;
 }
 .article-cartaz {
-    margin: 10px;  
+    margin: 10px;
 }
 .aside-li {
-    margin: 1vh;
+    display: flex;
+}
+.aside-a {
+    background-color: honeydew;
+    width: 100%;
+    padding: 10px;
+}
+#menu-aside h2 {
+    text-align: center
 }
